--- a/Notebooks/Capstone3_DataWrangling_EDA.ipynb
+++ b/Notebooks/Capstone3_DataWrangling_EDA.ipynb
@@ -2,18 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6e18a1ee",
+   "execution_count": 4,
+   "id": "135af2b9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-12T18:28:40.027373Z",
-     "start_time": "2022-09-12T18:28:36.830209Z"
+     "end_time": "2022-09-12T18:35:20.467091Z",
+     "start_time": "2022-09-12T18:35:20.442080Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'wordcloud'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 15>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m#For EDA\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mwordcloud\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WordCloud, STOPWORDS\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeature_extraction\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TfidfVectorizer\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneighbors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KNeighborsClassifier \n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'wordcloud'"
+     ]
+    }
+   ],
    "source": [
-    "import seaborn as sns"
+    "#Essentials\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import csv \n",
+    "import datetime as dt\n",
+    "\n",
+    "#For scraping Reddit\n",
+    "import praw\n",
+    "from psaw import PushshiftAPI\n",
+    "\n",
+    "#For EDA\n",
+    "import re\n",
+    "from wordcloud import WordCloud, STOPWORDS\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.neighbors import KNeighborsClassifier \n",
+    "from sklearn.cluster import KMeans\n",
+    "import sklearn.cluster\n",
+    "import sklearn.decomposition\n",
+    "import matplotlib.colors\n",
+    "from textblob import TextBlob\n",
+    "from gensim.models import Word2Vec\n",
+    "import nltk\n",
+    "from nltk import pos_tag\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer \n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "import textstat\n",
+    "import gensim.corpora as corpora\n",
+    "from pprint import pprint\n",
+    "import gensim\n",
+    "from gensim.utils import simple_preprocess\n",
+    "import pyLDAvis.gensim\n",
+    "import pickle \n",
+    "import pyLDAvis\n",
+    "import os"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff41785",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
