--- a/Notebooks/Capstone3_DataWrangling_EDA.ipynb
+++ b/Notebooks/Capstone3_DataWrangling_EDA.ipynb
@@ -2,27 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "135af2b9",
+   "execution_count": 10,
+   "id": "ae3f396c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-12T18:35:20.467091Z",
-     "start_time": "2022-09-12T18:35:20.442080Z"
+     "end_time": "2022-09-12T18:44:34.802489Z",
+     "start_time": "2022-09-12T18:44:34.793480Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'wordcloud'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 15>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m#For EDA\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mwordcloud\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WordCloud, STOPWORDS\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeature_extraction\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtext\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TfidfVectorizer\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneighbors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KNeighborsClassifier \n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'wordcloud'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Essentials\n",
     "import pandas as pd\n",
@@ -57,7 +45,7 @@
     "from pprint import pprint\n",
     "import gensim\n",
     "from gensim.utils import simple_preprocess\n",
-    "import pyLDAvis.gensim\n",
+    "import pyLDAvis.gensim_models\n",
     "import pickle \n",
     "import pyLDAvis\n",
     "import os"
@@ -66,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ff41785",
+   "id": "61306c75",
    "metadata": {},
    "outputs": [],
    "source": []
