--- a/Notebooks/Capstone3_DataWrangling_EDA.ipynb
+++ b/Notebooks/Capstone3_DataWrangling_EDA.ipynb
@@ -61,11 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b8743a3f",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-09-18T20:58:00.845Z"
+     "end_time": "2022-09-18T21:22:53.185730Z",
+     "start_time": "2022-09-18T20:58:04.726804Z"
     }
    },
    "outputs": [
@@ -105,11 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "165cca7a",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-09-18T20:58:00.847Z"
+     "end_time": "2022-09-18T21:23:10.418189Z",
+     "start_time": "2022-09-18T21:22:53.194738Z"
     }
    },
    "outputs": [],
@@ -119,15 +121,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "785a786b",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-09-18T20:58:00.853Z"
+     "end_time": "2022-09-18T22:57:14.543957Z",
+     "start_time": "2022-09-18T21:23:10.427171Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\psaw\\PushshiftAPI.py:252: UserWarning: Not all PushShift shards are active. Query results may be incomplete\n",
+      "  warnings.warn(shards_down_message)\n",
+      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\psaw\\PushshiftAPI.py:192: UserWarning: Got non 200 code 429\n",
+      "  warnings.warn(\"Got non 200 code %s\" % response.status_code)\n",
+      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\psaw\\PushshiftAPI.py:180: UserWarning: Unable to connect to pushshift.io. Retrying after backoff.\n",
+      "  warnings.warn(\"Unable to connect to pushshift.io. Retrying after backoff.\")\n"
+     ]
+    }
+   ],
    "source": [
     "#Pulling comments from mental health\n",
     "\n",
@@ -142,11 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5fe48b92",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-09-18T20:58:00.855Z"
+     "end_time": "2022-09-18T22:57:38.572099Z",
+     "start_time": "2022-09-18T22:57:14.631323Z"
     }
    },
    "outputs": [],
@@ -164,14 +181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a1e7409c",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-09-18T20:58:00.861Z"
+     "end_time": "2022-09-18T23:03:13.668402Z",
+     "start_time": "2022-09-18T22:57:38.577089Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\psaw\\PushshiftAPI.py:252: UserWarning: Not all PushShift shards are active. Query results may be incomplete\n",
+      "  warnings.warn(shards_down_message)\n",
+      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\psaw\\PushshiftAPI.py:192: UserWarning: Got non 200 code 429\n",
+      "  warnings.warn(\"Got non 200 code %s\" % response.status_code)\n",
+      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\psaw\\PushshiftAPI.py:180: UserWarning: Unable to connect to pushshift.io. Retrying after backoff.\n",
+      "  warnings.warn(\"Unable to connect to pushshift.io. Retrying after backoff.\")\n"
+     ]
+    }
+   ],
    "source": [
     "gen_subMI = list(api.search_submissions(after=start_epoch,\n",
     "                            subreddit='mentalillness',\n",
@@ -185,11 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1b273d75",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-09-18T20:58:00.864Z"
+     "end_time": "2022-09-18T23:03:15.239888Z",
+     "start_time": "2022-09-18T23:03:13.681411Z"
     }
    },
    "outputs": [],
@@ -199,14 +231,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "987ecd65",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-09-18T20:58:00.866Z"
+     "end_time": "2022-09-18T23:16:27.896527Z",
+     "start_time": "2022-09-18T23:03:15.242882Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\psaw\\PushshiftAPI.py:252: UserWarning: Not all PushShift shards are active. Query results may be incomplete\n",
+      "  warnings.warn(shards_down_message)\n",
+      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\psaw\\PushshiftAPI.py:192: UserWarning: Got non 200 code 429\n",
+      "  warnings.warn(\"Got non 200 code %s\" % response.status_code)\n",
+      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\psaw\\PushshiftAPI.py:180: UserWarning: Unable to connect to pushshift.io. Retrying after backoff.\n",
+      "  warnings.warn(\"Unable to connect to pushshift.io. Retrying after backoff.\")\n"
+     ]
+    }
+   ],
    "source": [
     "gen_comMI = api.search_comments(after=start_epoch, \n",
     "                            subreddit='mentalillness',\n",
@@ -219,11 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "db0e0541",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-09-18T20:58:00.870Z"
+     "end_time": "2022-09-18T23:16:30.448626Z",
+     "start_time": "2022-09-18T23:16:27.951685Z"
     },
     "scrolled": true
    },
@@ -234,11 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "36369ae4",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-09-18T20:58:00.873Z"
+     "end_time": "2022-09-18T23:16:30.469630Z",
+     "start_time": "2022-09-18T23:16:30.459631Z"
     }
    },
    "outputs": [],
