--- a/Notebooks/Capstone3_DataWrangling_EDA.ipynb
+++ b/Notebooks/Capstone3_DataWrangling_EDA.ipynb
@@ -6,11 +6,20 @@
    "id": "0d576d86",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T21:57:05.635634Z",
-     "start_time": "2022-09-21T21:56:48.566180Z"
+     "end_time": "2022-10-05T17:02:02.792468Z",
+     "start_time": "2022-10-05T17:01:50.714608Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\past\\builtins\\misc.py:45: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
+      "  from imp import reload\n"
+     ]
+    }
+   ],
    "source": [
     "#Essentials\n",
     "import pandas as pd\n",
@@ -280,13 +289,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d71105c3",
+   "metadata": {},
+   "source": [
+    "# Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7ede4b08",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T21:57:48.314964Z",
-     "start_time": "2022-09-21T21:57:22.465147Z"
+     "end_time": "2022-10-05T17:02:53.777968Z",
+     "start_time": "2022-10-05T17:02:29.596787Z"
     }
    },
    "outputs": [],
