--- a/Notebooks/Capstone3_DataWrangling_EDA.ipynb
+++ b/Notebooks/Capstone3_DataWrangling_EDA.ipynb
@@ -2,24 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0d576d86",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-07T17:43:34.964267Z",
-     "start_time": "2022-11-07T17:43:26.439225Z"
+     "end_time": "2022-11-07T22:22:31.939363Z",
+     "start_time": "2022-11-07T22:22:31.928342Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Julia\\anaconda3\\lib\\site-packages\\past\\builtins\\misc.py:45: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
-      "  from imp import reload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Essentials\n",
     "import pandas as pd\n",
@@ -4816,12 +4807,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ddbdc04c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-07T17:48:15.485187Z",
-     "start_time": "2022-11-07T17:48:13.103720Z"
+     "end_time": "2022-11-07T22:22:46.386259Z",
+     "start_time": "2022-11-07T22:22:43.998909Z"
     }
    },
    "outputs": [],
@@ -4831,12 +4822,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "224b6376",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-07T17:48:15.690739Z",
-     "start_time": "2022-11-07T17:48:15.586645Z"
+     "end_time": "2022-11-07T22:22:47.824232Z",
+     "start_time": "2022-11-07T22:22:47.731139Z"
     }
    },
    "outputs": [],
@@ -4854,12 +4845,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "1793d369",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-07T17:48:48.721890Z",
-     "start_time": "2022-11-07T17:48:48.476706Z"
+     "end_time": "2022-11-07T22:22:51.578731Z",
+     "start_time": "2022-11-07T22:22:51.393376Z"
     }
    },
    "outputs": [],
@@ -4870,12 +4861,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "5c5ed6d9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-07T17:48:52.828791Z",
-     "start_time": "2022-11-07T17:48:51.236950Z"
+     "end_time": "2022-11-07T22:22:54.410728Z",
+     "start_time": "2022-11-07T22:22:53.224955Z"
     }
    },
    "outputs": [
@@ -5014,7 +5005,7 @@
    "id": "d29e2405",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-11-07T17:49:59.180Z"
+     "start_time": "2022-11-07T22:26:20.917Z"
     }
    },
    "outputs": [],
@@ -5026,14 +5017,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "731ae3c5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-11-07T22:24:48.125518Z",
+     "start_time": "2022-11-07T22:23:19.683425Z"
+    }
+   },
    "outputs": [],
    "source": [
     "lda_model = gensim.models.LdaMulticore(corpus=corpus,\n",
     "                                           id2word=id2word,\n",
-    "                                           num_topics=8, \n",
+    "                                           num_topics=10, \n",
     "                                           random_state=100,\n",
     "                                           chunksize=100,\n",
     "                                           passes=10,\n",
